Fix footer vertical alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,3 +34,10 @@ body {
   background-color: #f5f5f5;
 }
 
+#wrap > .container {
+  padding: 60px 15px 0;
+}
+.container .credit {
+  margin: 20px 0;
+}
+
